<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EntryFormFragment"
    android:orientation="vertical"
    android:paddingHorizontal="40dp">
    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_one_name"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp"
        />


    <LinearLayout
        android:id="@+id/field_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/page_title"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/principal_prompt"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/principal_amount_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/principal_hint"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/field_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/field_1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest_prompt"
            android:textSize="18sp"
            />


        <EditText
            android:id="@+id/interest_rate_field"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/interest_hint"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        app:layout_constraintTop_toBottomOf="@id/field_2"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amortization_prompt"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/amortization_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minHeight="48dp"
            android:hint="@string/amortization_hint"
            />

    </LinearLayout>



    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"
        android:backgroundTint="@color/TD_second"
        app:layout_constraintTop_toBottomOf="@+id/field_3"
        android:paddingVertical="16dp"
        android:textSize="16sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>