<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".CalculationFragment">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/fragment_two_name"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/payment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/rounded_edge"
        android:gravity="center"
        android:minHeight="48dp"
        android:orientation="vertical"
        android:padding="20dp"

        app:layout_constraintTop_toBottomOf="@+id/page_title"

        >

        <TextView
            android:id="@+id/total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/default_calculation"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/pay_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/payment_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/payment_container"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:padding="20dp"
        >

        <LinearLayout
            android:id="@+id/mortgage_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/mortgage_amount"
                android:paddingVertical="8dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:text="@string/interest_amount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:text="@string/amortization_amount" />

        </LinearLayout>

        <Space
            android:layout_width="14dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/interest_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:orientation="vertical">

            <TextView
                android:id="@+id/mortgageVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:ellipsize="end"
                android:paddingVertical="8dp"
                android:maxLines="1"
                android:text="@string/default_calculation" />

            <TextView
                android:id="@+id/interestVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:text="@string/default_calculation" />

            <TextView
                android:id="@+id/amortizationVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:maxLines="1"
                android:paddingVertical="8dp"
                android:text="@string/default_calculation" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recalculate_text"
        android:layout_marginTop="8dp"
        android:padding="16sp"
        android:textSize="16sp"
        android:backgroundTint="@color/TD_second"
        app:layout_constraintTop_toBottomOf="@+id/details_container"
        />


</androidx.constraintlayout.widget.ConstraintLayout>